# strafe-client-jed

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
images/: squid.dds
maps/: bhop_easyhop.rbxm
src/: aabb.rs  body.rs  bvh.rs  compat_worker.rs  event.rs  face_crawler.rs  framework.rs  graphics.rs  graphics_context.rs  graphics_worker.rs  instruction.rs  integer.rs  lib.rs  load_bsp.rs  load_roblox.rs  main.rs  model.rs  model_graphics.rs  model_physics.rs  physics.rs  physics_context.rs  physics_worker.rs  primitives.rs  render_thread.rs  run.rs  settings.rs  setup.rs  setup_context.rs  shader.wgsl  sniffer.rs  sweep.rs  timelines.rs  timers.rs  window.rs  worker.rs  world.rs  zeroes.rs
tools/: arcane  bhop_maps  make-demo.sh  run  settings.conf  surf_maps  textures  toc  utopia
